# fusioninventory-agent-rust

./: .licensure.yml  Cargo.toml  README.md  agent.cfg
.github/workflows/: build.yaml  test.yaml  test_build.yaml
doc/: set_license_header.md
src/: local_inventory_sender.rs  main.rs
src/common/: config.rs  dmidecode.rs  mod.rs  webserver.rs
src/module/: common.rs  mod.rs
src/module/localinventory/: mod.rs  run_servers.rs
src/module/localinventory/data/: common.rs  mod.rs
src/module/localinventory/data/chassis/: dmidecode.rs  mod.rs
src/module/localinventory/data/cpu/: dmidecode.rs
src/module/localinventory/data/filesystem/: freebsd.rs  linux.rs  mod.rs  windows.rs
src/module/localinventory/data/operatingsystem/: common.rs  freebsd.rs  linux.rs  mod.rs  windows.rs
src/module/localinventory/data/partition/: freebsd.rs  linux.rs  mod.rs
src/module/localinventory/data/physicaldisk/: freebsd.rs  linux.rs  mod.rs  windows.rs
src/module/localinventory/data/software/: common.rs  freebsd.rs  linux.rs  mod.rs
src/module/localinventory/data/software/linux/: dpkg.rs  mod.rs  nix.rs  pacman.rs  rpm.rs  snap.rs
src/module/localinventory/data/software/windows/: mod.rs  registry.rs
src/module/localinventory/data/volume/: freebsd.rs  linux.rs  mod.rs  windows.rs
src/module/localinventory/structure/: chassis.rs  cpu.rs  filesystem.rs  operatingsystem.rs  partition.rs  physicaldisk.rs  software.rs  volume.rs
src/static/webserver/css/: main.css
tests/: geom_t3600  lshw.storage.json  test.rs
