[package]
name = "fusioninventory-agent"
version = "3.0.0"
authors = ["David Durieux <david@durieux.family>", "FusionInventory contributors"]
description = "Agent FusionInventory for local and remote (SNMP / ESX) inventory, have also network discovery and deploy features"
edition = "2021"
homepage = "https://fusioninventory.org/"
repository = "https://github.com/fusioninventory/fusioninventory-agent-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
nparse = "0.0.10"
sysinfo = "0.30.11"
simple-xml = "0.1.10"
chrono = "0.4.38"
iana-time-zone = "0.1.60"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde_derive = "1.0.201"
lazy_static = "1.4.0"
rocket = "0.5.0"
ctrlc = "3.4.4"

[target.'cfg(unix)'.dependencies]
sysctl = "0.5.5"
