[package]
name = "fusioninventory-agent"
version = "3.0.0-dev"
authors = ["David Durieux <david@durieux.family>", "FusionInventory contributors"]
description = "Agent FusionInventory for local and remote (SNMP / ESX) inventory, have also network discovery and deploy features"
edition = "2021"
homepage = "https://fusioninventory.org/"
repository = "https://github.com/fusioninventory/fusioninventory-agent-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
reqwest = { version = "0.12.4", features = ["json","blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
nparse = "0.0.10"
sysinfo = "0.31.4"
simple-xml = "0.1.10"
chrono = "0.4.38"
iana-time-zone = "0.1.60"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde_derive = "1.0.201"
lazy_static = "1.4.0"
rocket = "0.5.0"
ctrlc = "3.4.4"
single_value_channel = "1.2.2"
regex = "1.10.4"
text-to-ascii-art = "0.1.5"

[target.'cfg(unix)'.dependencies]
sysctl = "0.5.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[[bin]]
name = "fusioninventory-agent"
